# vlayer-web-proof

./: .gitignore  README.md
.github/workflows/: npm-publish.yaml
rust/: Cargo.toml  README.md  build.rs
rust/examples/: cli.rs
rust/src/: lib.rs  napi_bindings.rs  notarize.rs  params.rs  presentation.rs  verify.rs
ts/: .npmignore  README.md  index.ts  package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json
ts/scripts/: fix-esm.sh  fix-mjs.sh  fix-tgz.sh  postinstall.js
ts/src/: index.ts  native-wrapper.ts  types.ts  utils.ts  web-proof.ts
ts/tests/: integration.test.ts  test-notary-default.ts  test.js  unit.test.ts
ts/tests/package-tests/: index.js  package.json
ts/tests/package-tests/cjs/: index.js  package-lock.json  package.json
ts/tests/package-tests/esm/: index.js  package-lock.json  package.json
