[package]
name = "vlayer_web_proof"
version = "0.1.0"
edition = "2021"

[lib]
name = "vlayer_web_proof"
crate-type = ["cdylib", "rlib"]

[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[workspace]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"

# NAPI dependencies
napi = { version = "2.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt"], optional = true }
napi-derive = { version = "2.0", optional = true }

# Core dependencies (v102 uyumlu)
bincode = "1.3"
constcat = "0.6"
derivative = "2.2"
derive_builder = "0.12"
derive_more = { version = "1.0", features = ["from", "into", "deref", "debug"] }
hex = "0.4"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
notary-client = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.9" }
rangeset = "0.1"
regex = "1.11.1"
tlsn-common = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.9" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.9" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.9" }
tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "425614e" }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI için ek dependencies
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
napi-build = { version = "2.0", optional = true } 